testcases/pos/interactive/test71.tig
/* semicolon in initializer */
let 
    var x := (0; getchar())
in
    0
end
